# fantasy-football

./: .gitignore  2025_predictions_clean.csv  2025_season_summary.csv  README.md  clickhouse.sql  compose.yaml  example.py  load.py  load_old.py  new.py  notes.md  predictions_2025.csv  temp.py  test.pkl  test.py  test.sh
airflow/: .dockerignore  Dockerfile  pyproject.toml
airflow/config/: airflow.cfg
airflow/dags/: espn_stats.py  hello_world.py  silver.py
airflow/dags/bronze/: espn_stats.py  games.py  players.py  teams.py
docs/assets/: basic.excalidraw
docs/design/: api.md  kaggle.md
docs/runbook/: k3-images.md
frontend/: vite.config.js
frontend/src/: App.jsx  App.module.css  index.css
infra/: airflow.yaml  clickhouse.yaml  minio.yaml  service.yaml
scratch/: model.py  new.py
scripts/: build_player_mapping.py  click.py  clickhouse.sql  duck.py  espn.py  gold.sql  load.py  min.py  silver.sql
scripts/sql/: clickhouse.sql
service/: Dockerfile  README.md  pyproject.toml  test.py
service/src/service/: index.html  main.py
service/src/service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
service/src/service/common/: config.py  db.py  logger.py
service/src/service/dependencies/: dataset.py  game.py  player.py
service/src/service/models/: common.py
service/src/service/repository/: dataset.py  game.py  player.py
service/src/service/routers/: __init__.py  bad.py  datasets.py  games.py  health_router.py  kaggle_router.py  minio_router.py  player.py  predictions.py  test.py
service/src/service/services/: dataset.py  game.py  player.py
(+22 files in other folders)
