[project]
name = "service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "clickhouse-connect>=0.15.1",
    "fastapi[standard]>=0.135.3",
    "pandas>=3.0.2",
    "pydantic-settings>=2.13.1",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
]
